2017-11-11  Bruno Haible  <bruno@clisp.org>

	Fix crash on SPARC when oint_addr_mask != 2^oint_addr_len-1.
	* lispbibl.d (untype) [SPARC]: Make it work also when oint_addr_mask is
	not 2^oint_addr_len-1. Optimize also for 64-bit SPARC.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Avoid build error "Bogus header_flags -- redefine header_flags!".
	* lisbibl.d (hfint): Choose hfint depending on oint_type_shift, instead
	of depending on CPU.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Fix compilation warnings introduced on 2017-11-03.
	* lispbibl.d (NO_ASM, NO_ARI_ASM, NO_FAST_DISPATCH): Don't redefine if
	already defined.

2017-11-05  Bruno Haible  <bruno@clisp.org>

	Tweak mappable address ranges.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_END): Shrink a bit for Linux/mips
	(o32 and n32 ABIs), for Mac OS X/PowerPC, for Linux/alpha (based on
	findings with older Linux versions).
	Update SINGLEMAP_* parameters for Linux/alpha accordingly.
	Add MAPPABLE_ADDRESS_RANGE_* for FreeBSD/alpha, NetBSD/alpha,
	OSF/1/alpha (based on older findings).

2017-11-03  Bruno Haible  <bruno@clisp.org>

	Avoid assembler or linker errors due to assembly during current testing.
	This can be removed once ARI_ASM and SP_ASM generally works.
	* Makefile.devel (build-porting*): In builds with -DSAFETY=3, use also
	-DNO_ARI_ASM -DNO_SP_ASM.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Fix a "make check" hang on IRIX.
	* makemake.in (check-script): Work around the AIX peculiarity also on
	IRIX.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Support building with 'gmake' instead of 'make'.
	* configure (MAKE): New variable. Use it instead of hardcoding 'make'.
	* Makefile.devel (MAKE): Remove variable. All common 'make' programs
	set MAKE to a reasonable value (the value of the environment variable
	'MAKE' or the name of the current program) by default.

2017-11-02  Bruno Haible  <bruno@clisp.org>

	Avoid error on IRIX when stdout is a pipe (regression from 2016-11-11).